# SDSLTOOL

./: README.md
FYP/: CMakeLists.txt  fm_index-file.sdsl  image.sdsl  main.cpp  test.cpp  test.sdsl  test1.sdsl  test1.txt  testtest.sdsl  xx.sdsl
FYP/test-data/: test  test.sh  test1  test2  test3  test4.7z  test4.tar.xz
